SERVER-71759 dataSize command doesn't yield

(cherry picked from commit 44d81c74e55420619b295490606a6bedb367e3c2)